# metadata-chatbot

./: Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  tables.py
alembic/: env.py
alembic/versions/: ddf8b057aeff_first_commit.py  e50d64f294ad_new_tables.py
api/: __init__.py  auth.py  document_routes.py  folders.py
core/: elasticsearch_client.py  security.py
logger/: __init__.py  logger.py
models/: auth.py  folders.py  users.py
services/: document_service.py  folders.py  users.py
uploads/3bd989b4-1db0-4778-93c1-f421784be085/: NHDC(34345)Letter to NHDC_ Amended date for FPC_NHDC.doc  SDL(25104) delegation of powers.doc
utils/: folders.py
